--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -184,7 +184,7 @@
                         <div class="flex items-center">
                             <i class="fas fa-${this.getNotificationIcon(type)} mr-2"></i>
                             <span>${message}</span>
-                            <button onclick="this.parentElement.parentElement.remove()" class="ml-4 text-white hover:text-gray-200">
+                            <button onclick="this.parentElement.parentElement.remove()" class="btn-close">
                                 <i class="fas fa-times"></i>
                             </button>
                         </div>
