--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -56,7 +56,7 @@
             
             <button 
                 @click="enterApp()"
-                class="btn-primary w-full text-lg py-4"
+                class="btn-primary w-full"
             >
                 <i class="fas fa-arrow-right mr-3"></i>
                 ENTRAR
